# Velocity-Next

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE-Botan.txt  NOTICE  README.md  STFS Notes.txt  deploy_mac.sh
.github/workflows/: build-linux.yml  build-macos.yml  build-matrix.yml  build-windows-mingw.yml  build-windows-msvc.yml  release.yml
Velocity/: CMakeLists.txt  Info.plist.app  Resources.qrc  about.cpp  about.ui  achievementcreationwizard.h  achievementcreationwizard.ui  addressconverterdialog.h  avatarassetdownloader.cpp  avatarassetdownloader.h  boxartretriever.h  certificatedialog.h  clustertooldialog.h  creationwizard.cpp  creationwizard.h  creationwizard.ui  deviceviewer.cpp  deviceviewer.h  fatxfiledialog.cpp  fatxfiledialog.h  fatxpathgendialog.h  flashdriveconfigdatadialog.h  gameadderdialog.cpp  gameadderdialog.h  gamerpicturepackdialog.cpp  gamerpicturepackdialog.h  gamerpicturepackdialog.ui  githubcommitsdialog.cpp  gpddownloader.h  gpduploader.cpp  gpduploader.h  isodialog.cpp  isodialog.h  isosectordialog.cpp  isosectordialog.h  isosectordialog.ui  licensingdatadialog.h  main.cpp  mainwindow.cpp  mainwindow.h  (+50 more)
Velocity/PluginInterfaces/: igamemodder.h  igpdmodder.h
Velocity/TextEncoding/: EncodingDetector.cpp  EncodingDetector.h  README.md  TextDecoder.cpp  TextDecoder.h
Velocity/TextEncoding/Big5/: CP950Decoder.cpp  CP950Decoder.h  CP950Mapping.cpp  CP950Mapping.h
Velocity/TextEncoding/EUCKR/: CP949Decoder.cpp  CP949Decoder.h  CP949Mapping.cpp  CP949Mapping.h
Velocity/TextEncoding/GBK/: CP936Decoder.cpp  CP936Decoder.h  CP936Mapping.cpp  CP936Mapping.h
Velocity/TextEncoding/ShiftJIS/: CP932Decoder.cpp  CP932Decoder.h  CP932Mapping.cpp  CP932Mapping.h
XboxInternals/: CMakeLists.txt  README.md
XboxInternals/include/XboxInternals/: Export.h  Utils.h  XboxInternals.h
XboxInternals/include/XboxInternals/Account/: Account.h  AccountDefinitions.h  AccountHelpers.h
XboxInternals/include/XboxInternals/AvatarAsset/: AssetHelpers.h  AvatarAsset.h  AvatarAssetDefinitions.h  Ytgr.h
XboxInternals/include/XboxInternals/Cryptography/: XeCrypt.h  XeKeys.h
XboxInternals/include/XboxInternals/Disc/: Gdfx.h  ISO.h  Svod.h
XboxInternals/include/XboxInternals/Fatx/: FatxConstants.h  FatxDrive.h  FatxDriveDetection.h  FatxHelpers.h  XContentDevice.h  XContentDeviceItem.h  XContentDeviceProfile.h  XContentDeviceSharedItem.h  XContentDeviceTitle.h
XboxInternals/include/XboxInternals/Gpd/: AvatarAwardGpd.h  DashboardGpd.h  GameGpd.h  GpdBase.h  Xdbf.h  XdbfDefinitions.h  XdbfHelpers.h
XboxInternals/include/XboxInternals/IO/: BaseIO.h  BigFileIO.h  DeviceIO.h  FatxIO.h  FatxIndexableMultiFileIO.h  FileIO.h  IndexableMultiFileIO.h  IsoIO.h  JoinedMultiFileIO.h  LocalIndexableMultiFileIO.h  MemoryIO.h  MultiFileIO.h  StfsIO.h  SvodIO.h  SvodMultiFileIO.h  XexAesIO.h  XexBaseIO.h  XexZeroBasedCompressionIO.h
XboxInternals/include/XboxInternals/Iso/: GodDefinitions.h  GodImage.h  IsoDefinitions.h  IsoImage.h  XexExecutable.h
XboxInternals/include/XboxInternals/Plugins/: IsoExporter.h
XboxInternals/include/XboxInternals/Stfs/: IXContentHeader.h  StfsConstants.h  StfsDefinitions.h  StfsPackage.h  XContentHeader.h
XboxInternals/include/XboxInternals/Xex/: Xex.h  XexDefinitions.h  Xuiz.h
XboxInternals/src/: Utils.cpp  XboxInternals_global.h
XboxInternals/src/Account/: Account.cpp  AccountHelpers.cpp
XboxInternals/src/AvatarAsset/: AssetHelpers.cpp  AvatarAsset.cpp  Ytgr.cpp
XboxInternals/src/Cryptography/: XeCrypt.cpp  XeKeys.cpp
XboxInternals/src/Disc/: Gdfx.cpp  GodImage.cpp  ISO.cpp  IsoImage.cpp  Svod.cpp  XexExecutable.cpp
XboxInternals/src/Fatx/: FatxDrive.cpp  FatxDriveDetection.cpp  FatxHelpers.cpp  XContentDevice.cpp  XContentDeviceItem.cpp  XContentDeviceProfile.cpp  XContentDeviceSharedItem.cpp  XContentDeviceTitle.cpp
XboxInternals/src/Gpd/: AvatarAwardGpd.cpp  DashboardGpd.cpp  GameGpd.cpp  GpdBase.cpp  Xdbf.cpp  XdbfHelpers.cpp
XboxInternals/src/IO/: BaseIO.cpp  BigFileIO.cpp  DeviceIO.cpp  FatxIO.cpp  FatxIndexableMultiFileIO.cpp  FileIO.cpp  IndexableMultiFileIO.cpp  IsoIO.cpp  JoinedMultiFileIO.cpp  LocalIndexableMultiFileIO.cpp  MemoryIO.cpp  MultiFileIO.cpp  StfsIO.cpp  SvodIO.cpp  SvodMultiFileIO.cpp  XexAesIO.cpp  XexBaseIO.cpp  XexZeroBasedCompressionIO.cpp
XboxInternals/src/Plugins/: BatchCreator.cpp
XboxInternals/src/Stfs/: IXContentHeader.cpp  StfsDefinitions.cpp  StfsPackage.cpp  XContentHeader.cpp
XboxInternals/src/Xex/: Xex.cpp  Xuiz.cpp
cmake/: FindBotan.cmake  XboxInternalsConfig.cmake.in  botan_modules.cmake  msvc-toolchain.cmake
scripts/: compare_remote_tree.py
